[gd_scene load_steps=3 format=3 uid="uid://ofx0jnp44rnx"]

[ext_resource type="Script" path="res://CombatantManager.gd" id="1_ncn58"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uyn1c"]
bg_color = Color(0.231825, 0.208479, 0.173325, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.600707, 0.343498, 0.0887803, 1)

[node name="CombatantManager" type="Node2D"]
script = ExtResource("1_ncn58")

[node name="Team1" type="Marker2D" parent="."]
position = Vector2(572, 328)

[node name="Team2" type="Marker2D" parent="."]
position = Vector2(956, 328)

[node name="ResultLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="ResultLayer"]
custom_minimum_size = Vector2(200, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ResultLayer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Team # wins!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 425.0
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_uyn1c")
editable = false
